--- a/tests/descrbufsize.cmp
+++ b/tests/descrbufsize.cmp
@@ -8,11 +8,13 @@
     4: EXIT
 
 #### Executing Tokens #################################
+New process: pid=1
     0: #4 line 1 ("") Function: main (0 vars)
     1: #4 line 2 ("") DESCR
-    2: #4 line 2 ("", 11) DESCRBUFSIZE
-    3: #4 line 2 ("", 4096) POP
+    2: #4 line 2 ("", -1) DESCRBUFSIZE
+    3: #4 line 2 ("", 0) POP
     4: #4 line 3 ("") EXIT
+Process exited: pid=1
 Program exited.
 Execution completed in 5 steps.
 
