--- a/tests/notify_except.cmp
+++ b/tests/notify_except.cmp
@@ -21,7 +21,7 @@ New process: pid=1
     5: #4 line 2 ("", #2, LV0) @
     6: #4 line 2 ("", #2, #5) "foo"
     7: #4 line 2 ("", #2, #5, "foo") NOTIFY_EXCEPT
-NOTIFY TO ALL IN Main Room(#2) EXCEPT John_Doe(#5): foo
+NOTIFY TO ALL IN Test Chamber #2(#2) EXCEPT John_Doe(#5): foo
     8: #4 line 3 ("") EXIT
 Process exited: pid=1
 Program exited.
