--- a/tests/online.cmp
+++ b/tests/online.cmp
@@ -6,9 +6,11 @@
     2: EXIT
 
 #### Executing Tokens #################################
+New process: pid=1
     0: #4 line 1 ("") Function: main (0 vars)
     1: #4 line 2 ("") ONLINE
-    2: #4 line 3 ("", #1, #5, #6, 3) EXIT
+    2: #4 line 3 ("", 0) EXIT
+Process exited: pid=1
 Program exited.
 Execution completed in 3 steps.
 
