--- a/tests/conboot.cmp
+++ b/tests/conboot.cmp
@@ -7,11 +7,12 @@
     3: EXIT
 
 #### Executing Tokens #################################
+New process: pid=1
     0: #4 line 1 ("") Function: main (0 vars)
     1: #4 line 2 ("") 2
     2: #4 line 2 ("", 2) CONBOOT
-BOOTED DESCRIPTOR 13: Jane_Doe(#6)
     3: #4 line 3 ("") EXIT
+Process exited: pid=1
 Program exited.
 Execution completed in 4 steps.
 
