--- a/tests/descr_setuser.cmp
+++ b/tests/descr_setuser.cmp
@@ -16,20 +16,18 @@
    12: EXIT
 
 #### Executing Tokens #################################
+New process: pid=1
     0: #4 line 1 ("") Function: main (0 vars)
     1: #4 line 2 ("") DESCR
-    2: #4 line 3 ("", 11) DUP
-    3: #4 line 3 ("", 11, 11) DESCRDBREF
-    4: #4 line 3 ("", 11, #5) POP
-    5: #4 line 4 ("", 11) DUP
-    6: #4 line 4 ("", 11, 11) "jane_doe"
-    7: #4 line 4 ("", 11, 11, "jane_doe") PMATCH
-    8: #4 line 4 ("", 11, 11, #6) "53cr37"
-    9: #4 line 4 ("", 11, 11, #6, "53cr37") DESCR_SETUSER
-RECONNECTED DESCRIPTOR 11 FROM John_Doe(#5) TO Jane_Doe(#6) USING PW '53cr37'
-   10: #4 line 5 ("", 11) DESCRDBREF
-   11: #4 line 5 ("", #6) POP
-   12: #4 line 6 ("") EXIT
+    2: #4 line 3 ("", -1) DUP
+    3: #4 line 3 ("", -1, -1) DESCRDBREF
+    4: #4 line 3 ("", -1, #-1) POP
+    5: #4 line 4 ("", -1) DUP
+    6: #4 line 4 ("", -1, -1) "jane_doe"
+    7: #4 line 4 ("", -1, -1, "jane_doe") PMATCH
+    8: #4 line 4 ("", -1, -1, #6) "53cr37"
+    9: #4 line 4 ("", -1, -1, #6, "53cr37") DESCR_SETUSER
+Error in #4 line 4 (DESCR_SETUSER): Incorrect password!
 Program exited.
-Execution completed in 13 steps.
+Execution completed in 10 steps.
 
