--- a/tests/notify_exclude.cmp
+++ b/tests/notify_exclude.cmp
@@ -27,7 +27,7 @@ New process: pid=1
     8: #4 line 3 ("", #2, #5, #6) 2
     9: #4 line 4 ("", #2, #5, #6, 2) "Foo."
    10: #4 line 4 ("", #2, #5, #6, 2, "Foo.") NOTIFY_EXCLUDE
-NOTIFY TO ALL IN Main Room(#2) EXCEPT [Jane_Doe(#6), John_Doe(#5)]: Foo.
+NOTIFY TO ALL IN Test Chamber #2(#2) EXCEPT [Jane_Doe(#6), John_Doe(#5)]: Foo.
    11: #4 line 5 ("") EXIT
 Process exited: pid=1
 Program exited.
